Add a few slides (3/4 with inverted background)

--- a/socialmedia.tex
+++ b/socialmedia.tex
@@ -62,7 +62,77 @@
 
 
 
+{
+\setbeamercolor{background canvas}{bg=foreground}
+
 \begin{frame}[c]{}
+
+\centerline{
+\color{background}
+  \Large Everyone should have a website
+}
+
+
+\end{frame}
+}
+
+
+\begin{frame}[c]{}
+
+  \bbi
+\item How can I get ahold of that person I met?
+\item I'd like to see more of that cool thing I saw.
+\item Check out this cool talk I saw.
+\item What is X up to these days?
+\item We should invite X to give a talk.
+\item We should invite X to apply for this job.
+  \ei
+
+\end{frame}
+
+
+
+
+{
+\setbeamercolor{background canvas}{bg=foreground}
+
+\begin{frame}[c]{}
+
+\centerline{
+\color{background}
+  \Large Blogs make the world better
+}
+
+
+\end{frame}
+}
+
+
+
+
+
+{
+\setbeamercolor{background canvas}{bg=foreground}
+
+\begin{frame}[c]{}
+
+\centerline{
+\color{background}
+  \Large Twitter is not entirely bad
+}
+
+
+\end{frame}
+}
+
+
+
+
+
+
+
+\begin{frame}[c]{}
+
 
 \Large
 
